デモ当日に表示されるポップアップ機能を追加

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -840,5 +840,8 @@
 <!-- Header Script -->
 <th:block th:replace="~{common/mainHeader :: headerScript}"></th:block>
 
+<!-- Today Demo Popup -->
+<th:block th:replace="~{common/todayDemoPopup :: popup}"></th:block>
+
 </body>
 </html>
