--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -346,5 +346,9 @@
     }
     /*]]>*/
   </script>
+
+  <!-- Today Demo Popup -->
+  <th:block th:replace="~{common/todayDemoPopup :: popup}"></th:block>
+
 </body>
 </html>
